--- a/moudle-deal/src/main/res/layout/deal_fragment_main.xml
+++ b/moudle-deal/src/main/res/layout/deal_fragment_main.xml
@@ -26,7 +26,7 @@
                 android:layout_width="23dp"
                 android:layout_height="23dp"
                 android:scaleType="fitCenter"
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:layout_marginStart="10dp"
                 android:layout_centerVertical="true"
                 android:background="@drawable/common_messaage"
@@ -77,7 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
-                android:text="我的持仓:"
+                android:text="我的持仓(克):"
                 android:textColor="@color/white"
                 android:textSize="14sp"/>
 
@@ -96,7 +96,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
-                android:text="活期份额:"
+                android:text="活期份额(克):"
                 android:textColor="@color/white"
                 android:layout_below="@id/tv_cc_tip"
                 android:layout_marginTop="6dp"
@@ -204,6 +204,7 @@
                 android:text="查看详情"
                 android:layout_alignParentRight="true"
                 android:textSize="16sp"
+                android:visibility="gone"
                 android:drawablePadding="10dp"
                 android:paddingRight="15dp"
                 android:drawableRight="@mipmap/deal_arrow_right"
