--- a/module-user/src/main/res/layout/user_activity_register.xml
+++ b/module-user/src/main/res/layout/user_activity_register.xml
@@ -44,100 +44,148 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/white"
             android:layout_marginTop="10dp"
+            android:background="@color/white"
             app:layout_constraintTop_toBottomOf="@id/rl_title">
 
 
+            <TextView
+                android:id="@+id/tv_tip_name"
+                android:layout_width="80dp"
+                android:layout_height="45dp"
+                android:background="@color/white"
+                android:gravity="center_vertical|left"
+                android:paddingLeft="15dp"
+                android:text="昵称"
+                android:textColor="#111111"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_tip_name"
-            android:layout_width="80dp"
-            android:paddingLeft="15dp"
-            android:gravity="center_vertical|left"
-            android:layout_height="45dp"
-            android:background="@color/white"
-            android:text="昵称"
-            android:textColor="#111111"
-            android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            <EditText
+                android:id="@+id/et_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:hint="请输入用户昵称"
+                android:paddingLeft="10dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:textColor="#111111"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@id/tv_tip_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tv_tip_name"
+                app:layout_constraintTop_toTopOf="@id/tv_tip_name" />
 
-        <EditText
-            android:id="@+id/et_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:hint="请输入用户昵称"
-            android:paddingLeft="10dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:textColor="#111111"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@id/tv_tip_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tv_tip_name"
-            app:layout_constraintTop_toTopOf="@id/tv_tip_name" />
+            <View
+                android:id="@+id/view_line_name"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#f2f2f4"
+                app:layout_constraintTop_toBottomOf="@id/tv_tip_name" />
 
-        <View
-            android:id="@+id/view_line_name"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#f2f2f4"
-            app:layout_constraintTop_toBottomOf="@id/tv_tip_name" />
+            <TextView
+                android:id="@+id/tv_tip_tel"
+                android:layout_width="80dp"
+                android:layout_height="45dp"
+                android:background="@color/white"
+                android:gravity="center_vertical|left"
+                android:paddingLeft="15dp"
+                android:text="手机号码"
+                android:textColor="#111111"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/view_line_name" />
 
-        <TextView
-            android:id="@+id/tv_tip_tel"
-            android:layout_width="80dp"
-            android:paddingLeft="15dp"
-            android:gravity="center_vertical|left"
-            android:layout_height="45dp"
-            android:background="@color/white"
-            android:text="手机号码"
-            android:textColor="#111111"
-            android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_line_name" />
+            <EditText
+                android:id="@+id/et_phone"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:hint="请输入手机号码"
+                android:inputType="number"
+                android:maxLength="11"
+                android:paddingLeft="10dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:textColor="#111111"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@id/tv_tip_tel"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tv_tip_tel"
+                app:layout_constraintTop_toTopOf="@id/tv_tip_tel" />
 
-        <EditText
-            android:id="@+id/et_phone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:hint="请输入手机号码"
-            android:inputType="number"
-            android:maxLength="11"
-            android:paddingLeft="10dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:textColor="#111111"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@id/tv_tip_tel"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tv_tip_tel"
-            app:layout_constraintTop_toTopOf="@id/tv_tip_tel" />
+            <View
+                android:id="@+id/view_line_tel"
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="#f2f2f4"
+                app:layout_constraintTop_toBottomOf="@id/tv_tip_tel" />
 
-        <View
-            android:id="@+id/view_line_tel"
-            android:layout_width="match_parent"
-            android:layout_height="0.1dp"
-            android:background="#f2f2f4"
-            app:layout_constraintTop_toBottomOf="@id/tv_tip_tel" />
 
+            <TextView
+                android:id="@+id/tv_send"
+                android:layout_width="60dp"
+                android:layout_height="0dp"
+                android:gravity="center"
+                android:text="发送"
+                app:layout_constraintBottom_toBottomOf="@id/et_phone"
+                app:layout_constraintEnd_toEndOf="@id/et_phone"
+                app:layout_constraintTop_toTopOf="@id/et_phone" />
+
+
+            <TextView
+                android:id="@+id/tv_tip_code"
+                android:layout_width="80dp"
+                android:layout_height="45dp"
+                android:background="@color/white"
+                android:gravity="center_vertical|left"
+                android:paddingLeft="15dp"
+                android:text="验证码"
+                android:textColor="#111111"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/view_line_tel" />
+
+            <EditText
+                android:id="@+id/et_code"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:hint="请输入验证码"
+                android:inputType="number"
+                android:maxLength="6"
+                android:paddingLeft="10dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:textColor="#111111"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@id/tv_tip_code"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tv_tip_code"
+                app:layout_constraintTop_toTopOf="@id/tv_tip_code" />
+
+            <View
+                android:id="@+id/view_line_code"
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="#f2f2f4"
+                app:layout_constraintTop_toBottomOf="@id/tv_tip_code" />
 
 
             <TextView
                 android:id="@+id/tv_tip_pwd"
                 android:layout_width="80dp"
-                android:paddingLeft="15dp"
-                android:gravity="center_vertical|left"
                 android:layout_height="45dp"
                 android:background="@color/white"
+                android:gravity="center_vertical|left"
+                android:paddingLeft="15dp"
                 android:text="密码"
                 android:textColor="#111111"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/view_line_tel" />
+                app:layout_constraintTop_toBottomOf="@id/view_line_code" />
 
             <EditText
                 android:id="@+id/et_pwd"
@@ -145,7 +193,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:hint="请输入密码"
-                android:inputType="numberPassword"
+                android:inputType="textPassword"
                 android:maxLength="11"
                 android:paddingLeft="10dp"
                 android:paddingTop="15dp"
@@ -168,10 +216,10 @@
             <TextView
                 android:id="@+id/tv_tip_pwd2"
                 android:layout_width="80dp"
-                android:paddingLeft="15dp"
-                android:gravity="center_vertical|left"
                 android:layout_height="45dp"
                 android:background="@color/white"
+                android:gravity="center_vertical|left"
+                android:paddingLeft="15dp"
                 android:text="确认密码"
                 android:textColor="#111111"
                 android:textSize="14sp"
@@ -184,7 +232,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:hint="请再次输入密码"
-                android:inputType="numberPassword"
+                android:inputType="textPassword"
                 android:maxLength="11"
                 android:paddingLeft="10dp"
                 android:paddingTop="15dp"
@@ -208,10 +256,10 @@
             <TextView
                 android:id="@+id/tv_re"
                 android:layout_width="100dp"
-                android:paddingLeft="15dp"
-                android:gravity="center_vertical|left"
                 android:layout_height="45dp"
                 android:background="@color/white"
+                android:gravity="center_vertical|left"
+                android:paddingLeft="15dp"
                 android:text="推荐人(选填)"
                 android:textColor="#111111"
                 android:textSize="14sp"
@@ -235,28 +283,27 @@
                 app:layout_constraintTop_toTopOf="@id/tv_re" />
 
 
-
             <!--            <RelativeLayout-->
-<!--                android:id="@+id/rl_recommenderName"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="45dp"-->
-<!--                android:background="@color/white"-->
-<!--                app:layout_constraintTop_toBottomOf="@id/view_line1">-->
+            <!--                android:id="@+id/rl_recommenderName"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="45dp"-->
+            <!--                android:background="@color/white"-->
+            <!--                app:layout_constraintTop_toBottomOf="@id/view_line1">-->
 
 
-<!--                <EditText-->
-<!--                    android:id="@+id/et_recommenderName"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_centerVertical="true"-->
-<!--                    android:layout_marginLeft="55dp"-->
-<!--                    android:background="@color/white"-->
-<!--                    android:hint="请输入推荐人(选填)"-->
-<!--                    android:singleLine="true"-->
-<!--                    android:textColor="#111111"-->
-<!--                    android:textSize="14sp" />-->
+            <!--                <EditText-->
+            <!--                    android:id="@+id/et_recommenderName"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="match_parent"-->
+            <!--                    android:layout_centerVertical="true"-->
+            <!--                    android:layout_marginLeft="55dp"-->
+            <!--                    android:background="@color/white"-->
+            <!--                    android:hint="请输入推荐人(选填)"-->
+            <!--                    android:singleLine="true"-->
+            <!--                    android:textColor="#111111"-->
+            <!--                    android:textSize="14sp" />-->
 
-<!--            </RelativeLayout>-->
+            <!--            </RelativeLayout>-->
 
             <View
                 android:id="@+id/view_line_pwd2"
@@ -265,21 +312,20 @@
                 android:background="#f2f2f4"
                 app:layout_constraintTop_toBottomOf="@id/tv_re" />
 
-        <TextView
-            android:id="@+id/tv_regis"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:layout_margin="15dp"
-            android:background="@drawable/user_shape_ic_login_bg"
-            android:gravity="center"
-            android:text="注册"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/view_line_pwd2" />
+            <TextView
+                android:id="@+id/tv_regis"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_margin="15dp"
+                android:background="@drawable/user_shape_ic_login_bg"
+                android:gravity="center"
+                android:text="注册"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:layout_constraintTop_toBottomOf="@id/view_line_pwd2" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
