--- a/module-user/src/main/res/layout/user_activity_login.xml
+++ b/module-user/src/main/res/layout/user_activity_login.xml
@@ -155,6 +155,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:id="@+id/tv_forget"
+            app:layout_constraintRight_toLeftOf="@id/tv_register"
+            app:layout_constraintTop_toBottomOf="@id/tv_login"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:text="忘记密码"
+            android:layout_marginEnd="10dp"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
 
         <ImageView
             android:id="@+id/iv_choose"
