忘记密码和注册

--- a/module-user/src/main/res/layout/user_activity_login.xml
+++ b/module-user/src/main/res/layout/user_activity_login.xml
@@ -163,7 +163,6 @@
             android:paddingBottom="15dp"
             android:text="忘记密码"
             android:layout_marginEnd="10dp"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -184,7 +183,7 @@
             app:layout_constraintBottom_toBottomOf="@id/tv_register"
             app:layout_constraintLeft_toRightOf="@id/iv_choose"
             android:layout_marginLeft="2dp"
-            android:text="已阅读《用户协议》和《隐私政策》"
+            android:text="《用户协议》和《隐私政策》"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
