--- a/module-user/src/main/res/layout/user_activity_register.xml
+++ b/module-user/src/main/res/layout/user_activity_register.xml
@@ -49,41 +49,49 @@
             app:layout_constraintTop_toBottomOf="@id/rl_title">
 
 
-            <TextView
-                android:id="@+id/tv_tip_name"
-                android:layout_width="80dp"
-                android:layout_height="45dp"
-                android:background="@color/white"
-                android:gravity="center_vertical|left"
-                android:paddingLeft="15dp"
-                android:text="昵称"
-                android:textColor="#111111"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/et_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:hint="请输入用户昵称"
-                android:paddingLeft="10dp"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
-                android:textColor="#111111"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@id/tv_tip_name"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/tv_tip_name"
-                app:layout_constraintTop_toTopOf="@id/tv_tip_name" />
-
-            <View
-                android:id="@+id/view_line_name"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_nickname"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#f2f2f4"
-                app:layout_constraintTop_toBottomOf="@id/tv_tip_name" />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tv_tip_name"
+                    android:layout_width="80dp"
+                    android:layout_height="45dp"
+                    android:background="@color/white"
+                    android:gravity="center_vertical|left"
+                    android:paddingLeft="15dp"
+                    android:text="昵称"
+                    android:textColor="#111111"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <EditText
+                    android:id="@+id/et_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:hint="请输入用户昵称"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
+                    android:textColor="#111111"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_tip_name"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tv_tip_name"
+                    app:layout_constraintTop_toTopOf="@id/tv_tip_name" />
+
+                <View
+                    android:id="@+id/view_line_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#f2f2f4"
+                    app:layout_constraintTop_toBottomOf="@id/tv_tip_name" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             <TextView
                 android:id="@+id/tv_tip_tel"
@@ -96,7 +104,7 @@
                 android:textColor="#111111"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/view_line_name" />
+                app:layout_constraintTop_toBottomOf="@id/cl_nickname" />
 
             <EditText
                 android:id="@+id/et_phone"
@@ -212,105 +220,99 @@
                 android:background="#f2f2f4"
                 app:layout_constraintTop_toBottomOf="@id/tv_tip_pwd" />
 
-
-            <TextView
-                android:id="@+id/tv_tip_pwd2"
-                android:layout_width="80dp"
-                android:layout_height="45dp"
-                android:background="@color/white"
-                android:gravity="center_vertical|left"
-                android:paddingLeft="15dp"
-                android:text="确认密码"
-                android:textColor="#111111"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/view_line_pwd" />
-
-            <EditText
-                android:id="@+id/et_pwd2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:hint="请再次输入密码"
-                android:inputType="textPassword"
-                android:maxLength="11"
-                android:paddingLeft="10dp"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
-                android:textColor="#111111"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@id/tv_tip_pwd2"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/tv_tip_pwd2"
-                app:layout_constraintTop_toTopOf="@id/tv_tip_pwd2" />
-
-
-            <View
-                android:id="@+id/view_re"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_pwd2"
+                app:layout_constraintTop_toBottomOf="@id/view_line_pwd"
                 android:layout_width="match_parent"
-                android:layout_height="0.1dp"
-                android:background="#f2f2f4"
-                app:layout_constraintTop_toBottomOf="@id/tv_tip_pwd2" />
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tv_tip_pwd2"
+                    android:layout_width="80dp"
+                    android:layout_height="45dp"
+                    android:background="@color/white"
+                    android:gravity="center_vertical|left"
+                    android:paddingLeft="15dp"
+                    android:text="确认密码"
+                    android:textColor="#111111"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                     />
+
+                <EditText
+                    android:id="@+id/et_pwd2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:hint="请再次输入密码"
+                    android:inputType="textPassword"
+                    android:maxLength="11"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
+                    android:textColor="#111111"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_tip_pwd2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tv_tip_pwd2"
+                    app:layout_constraintTop_toTopOf="@id/tv_tip_pwd2" />
 
 
-            <TextView
-                android:id="@+id/tv_re"
-                android:layout_width="100dp"
-                android:layout_height="45dp"
-                android:background="@color/white"
-                android:gravity="center_vertical|left"
-                android:paddingLeft="15dp"
-                android:text="推荐人(选填)"
-                android:textColor="#111111"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/view_re" />
+                <View
+                    android:id="@+id/view_re"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.1dp"
+                    android:background="#f2f2f4"
+                    app:layout_constraintTop_toBottomOf="@id/tv_tip_pwd2" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <EditText
-                android:id="@+id/et_recommenderName"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:hint="推荐人"
-                android:paddingLeft="10dp"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
-                android:textColor="#111111"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@id/tv_re"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/tv_re"
-                app:layout_constraintTop_toTopOf="@id/tv_re" />
-
-
-            <!--            <RelativeLayout-->
-            <!--                android:id="@+id/rl_recommenderName"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="45dp"-->
-            <!--                android:background="@color/white"-->
-            <!--                app:layout_constraintTop_toBottomOf="@id/view_line1">-->
-
-
-            <!--                <EditText-->
-            <!--                    android:id="@+id/et_recommenderName"-->
-            <!--                    android:layout_width="match_parent"-->
-            <!--                    android:layout_height="match_parent"-->
-            <!--                    android:layout_centerVertical="true"-->
-            <!--                    android:layout_marginLeft="55dp"-->
-            <!--                    android:background="@color/white"-->
-            <!--                    android:hint="请输入推荐人(选填)"-->
-            <!--                    android:singleLine="true"-->
-            <!--                    android:textColor="#111111"-->
-            <!--                    android:textSize="14sp" />-->
-
-            <!--            </RelativeLayout>-->
-
-            <View
-                android:id="@+id/view_line_pwd2"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_recommand"
+                app:layout_constraintTop_toBottomOf="@id/cl_pwd2"
                 android:layout_width="match_parent"
-                android:layout_height="0.1dp"
-                android:background="#f2f2f4"
-                app:layout_constraintTop_toBottomOf="@id/tv_re" />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tv_re"
+                    android:layout_width="100dp"
+                    android:layout_height="45dp"
+                    android:background="@color/white"
+                    android:gravity="center_vertical|left"
+                    android:paddingLeft="15dp"
+                    android:text="推荐人(选填)"
+                    android:textColor="#111111"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <EditText
+                    android:id="@+id/et_recommenderName"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:hint="推荐人"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
+                    android:textColor="#111111"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_re"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tv_re"
+                    app:layout_constraintTop_toTopOf="@id/tv_re" />
+
+
+                <View
+                    android:id="@+id/view_line_pwd2"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.1dp"
+                    android:background="#f2f2f4"
+                    app:layout_constraintTop_toBottomOf="@id/tv_re" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 
             <TextView
                 android:id="@+id/tv_regis"
@@ -322,7 +324,7 @@
                 android:text="注册"
                 android:textColor="@color/white"
                 android:textSize="14sp"
-                app:layout_constraintTop_toBottomOf="@id/view_line_pwd2" />
+                app:layout_constraintTop_toBottomOf="@id/cl_recommand" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
