--- a/moudle-deal/src/main/res/layout/deal_activity_main.xml
+++ b/moudle-deal/src/main/res/layout/deal_activity_main.xml
@@ -148,9 +148,32 @@
                     />
 
                 <TextView
-                    android:id="@+id/tv_money_tip"
+                    android:id="@+id/tv_canuse_tip"
                     android:layout_marginTop="20dp"
                     app:layout_constraintTop_toBottomOf="@id/tv_price_tip"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="可用份额:"
+                    android:textSize="14sp"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_canuse"
+                    app:layout_constraintTop_toBottomOf="@id/tv_price"
+                    app:layout_constraintLeft_toRightOf="@id/tv_canuse_tip"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:textSize="14sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0克"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_money_tip"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_canuse_tip"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -160,7 +183,7 @@
 
                 <TextView
                     android:id="@+id/tv_money"
-                    app:layout_constraintTop_toBottomOf="@id/tv_price"
+                    app:layout_constraintTop_toBottomOf="@id/tv_canuse"
                     app:layout_constraintLeft_toRightOf="@id/tv_money_tip"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="20dp"
